# SPM

./: .gitignore  README.md  Readme.make  SVN commit guide.txt
Boost/: .gitignore  linux.py  linux.py.bak  windows.py
BuildSystem/: .gitignore  CMakeLists.txt  Makefile  build.py  doBuild.bat  doBuild.sh
BuildSystem/buildtools/classes/: .gitignore  Archive.py  Archiver.py  Binary.py  Builder.py  Builder.py.bak  CommandLineInterface.py  DebBuilder.py  Documentation.py  Globals.py  Installer.py  Manual.py  RLibrary.py  System.py  UnitTests.py  Version.py  Version.py.bak
BuildSystem/buildtools/linux/: buildtools - Shortcut.lnk
Documentation/Development/: Dijkstra.R  dijstra_script.R  parser.cpp  parser.h
Documentation/Development/Resources/: Notes 1.txt  Notes 2.txt  estimation.spm  output.spm  plot shapes.s  population.spm
Documentation/Manual/: Acknowledgments.aux  Acknowledgments.tex  Build.bat  ChangesEnhancements.aux  ChangesEnhancements.tex  Estimation.aux  Estimation.tex  Examples.aux  Examples.tex  Introduction.aux  Introduction.tex  License.aux  License.tex  Observation.aux  Observation.tex  Overview.aux  Overview.tex  Population.aux  Population.tex  PostProcessing.aux  PostProcessing.tex  QuickReference.aux  QuickReference.py  QuickReference.tex  References.aux  Report.aux  Report.tex  RunningSPM.aux  RunningSPM.tex  SPM.aux  SPM.bbl  SPM.bib  SPM.blg  SPM.idx  SPM.ilg  SPM.ind  SPM.out  SPM.syn  SPM.tco  SPM.tcp  (+12 more)
Documentation/Manual/Examples/: Example1.tex  Example2.tex
Documentation/Manual/Figures/: QR_code.txt
Documentation/Manual/Syntax/: EstimationSyntax.tex  ObservationSyntax.tex  PopulationSyntax.tex  ReportSyntax.tex
R-libraries/: .gitignore  Build.bat  SPM_make_version.R  Version.R  run-roxygen.R  spmTest_make_version.R
R-libraries/spm/: DESCRIPTION  NAMESPACE
R-libraries/spm.Rcheck/: 00install.out
R-libraries/spm.Rcheck/spm/: DESCRIPTION  INDEX  NAMESPACE
R-libraries/spm/R/: PF.R  PFConstant.R  PFdoublenormal.R  PFexponential.R  PFinverselogistic.R  PFlogistic.R  PFnormal.R  PFthreshold.R  calc.abundance.R  extract.MCMC.r  extract.R  extract.age.size.r  extract.layer.R  (+27 more)
R-libraries/spmTest/: DESCRIPTION
Source/: CConfiguration.cpp  CConfiguration.h  CRuntimeController.cpp  CRuntimeController.h  License.txt  Main.cpp  Version.h  spm.rc
Source/AgeSize/: CAgeSize.cpp  CAgeSize.h  CAgeSizeManager.cpp  CAgeSizeManager.h
Source/AgeingError/: CAgeingError.cpp  CAgeingError.h  CAgeingErrorManager.cpp  CAgeingErrorManager.h
Source/BaseClasses/: CBaseBuild.cpp  CBaseBuild.h  CBaseExecute.cpp  CBaseExecute.h  CBaseManager.cpp  CBaseManager.h  CBaseObject.cpp  CBaseObject.h  CBaseValidate.cpp  CBaseValidate.h
Source/Catchabilities/: CCatchability.Test.cpp  CCatchability.cpp  CCatchability.h  CCatchabilityManager.cpp  CCatchabilityManager.h
Source/ConfigurationLoaders/: CConfigurationLoader.Test.cpp  CConfigurationLoader.cpp  CConfigurationLoader.h
Source/DerivedQuantities/: CDerivedQuantity.cpp  CDerivedQuantity.h  CDerivedQuantityManager.cpp  CDerivedQuantityManager.h
Source/DerivedQuantitiesByCell/: CDerivedQuantityByCell.cpp  CDerivedQuantityByCell.h  CDerivedQuantityByCellManager.cpp  CDerivedQuantityByCellManager.h
Source/Distributions/: CLogNormalDistribution.cpp  CLogNormalDistribution.h  CNormalDistribution.cpp  CNormalDistribution.h
Source/Estimates/: CEstimateInfo.Test.cpp  CEstimateInfo.h  CEstimateManager.cpp  CEstimateManager.h
Source/Helpers/: CComparer.cpp  CComparer.h  CCompoundCategories.cpp  CCompoundCategories.h  CConvertor.cpp  CConvertor.h  CError.cpp  CError.h  CMath.cpp  CMath.h  CSpline.h  DefinedValues.h  ForEach.h
Source/InitializationPhases/: CInitializationPhase.cpp  CInitializationPhase.h  CInitializationPhaseManager.cpp  CInitializationPhaseManager.h
Source/Layers/: CLayer.cpp  CLayer.h  CLayerManager.cpp  CLayerManager.h
Source/Likelihoods/: CLikelihood.cpp  CLikelihood.h
Source/MCMC/: CMCMC.cpp  CMCMC.h  CMCMCManager.cpp  CMCMCManager.h
Source/Minimizers/: CMinimizer.cpp  CMinimizer.h  CMinimizerManager.cpp  CMinimizerManager.h
Source/ObjectFinder/: CObjectFinder.h
Source/ObjectiveFunction/: CObjectiveFunction.h
Source/Observations/: CObservation.cpp  CObservation.h  CObservationManager.cpp  CObservationManager.h
Source/PDFs/: CPDF.cpp  CPDF.h  CPDFManager.cpp  CPDFManager.h
Source/Penalties/: CPenalty.cpp  CPenalty.h  CPenaltyManager.cpp  CPenaltyManager.h
Source/PreferenceFunctions/: CPreferenceFunction.cpp  CPreferenceFunction.h  CPreferenceFunctionManager.cpp  CPreferenceFunctionManager.h
Source/Processes/: CProcess.cpp  CProcess.h  CProcessManager.cpp  CProcessManager.h
Source/Profiles/: CProfile.cpp  CProfile.h  CProfileManager.cpp  CProfileManager.h
Source/RandomNumberGenerator/: CRandomNumberGenerator.Test.cpp
Source/Reports/: CReport.cpp  CReport.h  CReportManager.cpp  CReportManager.h
Source/RuntimeThread/: CRuntimeThread.cpp  CRuntimeThread.h
Source/Selectivities/: CSelectivity.cpp  CSelectivity.h  CSelectivityManager.cpp  CSelectivityManager.h
Source/SizeWeight/: CSizeWeight.cpp  CSizeWeight.h  CSizeWeightManager.cpp  CSizeWeightManager.h
Source/TestFixtures/: C1x1_Fixture.cpp  C1x1_Fixture.h  C1x1_Initialisation_Fixture.cpp  C1x1_Initialisation_Fixture.h  C3x3_Fixture.cpp  C3x3_Fixture.h  CLayer_Fixture.cpp  CLayer_Fixture.h  CWorld_Fixture.cpp  CWorld_Fixture.h
Source/TimeSteps/: CTimeStep.cpp  CTimeStep.h  CTimeStepManager.cpp  CTimeStepManager.h
Source/Translations/: English_UK.h  Translations.h
Source/World/: CWorld.cpp  CWorld.h  CWorldSquare.cpp  CWorldSquare.h
TestCases/1x1_Examples/: run.bat
TestCases/2x3_Examples/: run.bat
TestCases/3x3_Examples/: run.bat
TestCases/case0/: config.spm  run.bat
TestCases/validate/: run.bat
examples/1x1/: estimation.spm  reports.spm  run.bat  simulation-reports.spm
examples/simple_spatial/: estimation.spm  report.spm  run.bat  simulation_reports.spm
installer/: Readme.make  Readme.txt  SPM.nsi  SPM.xml  Version.nsi
kthohr/: commands.txt  lapack-3.9.0.7z  linux.py  mcmc.7z  windows.py
(+583 files in other folders)
